--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <script src="./game/whack.js"></script>
     <script src="./game/columns.js"></script>
+    <script src="./game/masterMind.js"></script>
 
     <script src="https://www.youtube.com/iframe_api"></script>
 
