--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     <script src="./game/programmingGui.js"></script>
     <script src="./game/programmingProgram.js"></script>
 
+    <script src="./game/readProgram.js"></script>
+    <script src="./game/readProgramLevel.js"></script>
 
     <style>
         html,
