--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
         scene.clearColor = new BABYLON.Color3(0.7, 0.8, 0.9);
 
 
-   // let background = new BABYLON.Layer("", "./icon/blueWhite.jpg", scene);
-   // //let background = new BABYLON.Layer("", "./icon/blue.jpg", scene);
-	//background.isBackground = true;
+    let background = new BABYLON.Layer("", "./icon/blueWhite.jpg", scene);
+  // let background = new BABYLON.Layer("", "./icon/blue.jpg", scene);
+	background.isBackground = true;
         engine.displayLoadingUI();
 
 
